# cardano-e2e-example

./: .readthedocs.yaml  README.md  docker-compose.yaml
.githooks/: pre-commit
.github/workflows/: eslint.yml  frontend.yml  haskell.yml
backend/: .dockerignore  Dockerfile  cabal.project  escrow.cabal  pab-config-remote.yaml  preprod-token
backend/app/: EscrowHandlers.hs  Handlers.hs  Main.hs
backend/config/: blockfrost-token-mainnet  pab-config-docker-preprod.yaml  pab-config-mainnet.yaml  pab-config-preprod.yaml
backend/src/: Escrow.hs
backend/src/Escrow/: Business.hs  OnChain.hs  Types.hs  Validator.hs
backend/src/Escrow/OffChain/: Interface.hs  Operations.hs
backend/src/Utils/: OffChain.hs  OnChain.hs  WalletAddress.hs
backend/test/: Main.hs
backend/test/Tests/: Utils.hs
backend/test/Tests/OffChain/: Trace0.hs  Trace1.hs  Trace2.hs  Trace3.hs
backend/test/Tests/Prop/: Escrow.hs  EscrowModel.hs  Extra.hs  Gen.hs
contract/: NOTICE  cabal.project  escrow.cabal  pab-config-remote.yaml
contract/app/: EscrowHandlers.hs  Main.hs
contract/src/: Escrow.hs
contract/src/Escrow/: Business.hs  OffChain.hs  OnChain.hs  Types.hs  Validator.hs
contract/src/Escrow/OffChain/: Actions.hs  ObservableState.hs  Operations.hs  Parameters.hs
contract/src/Utils/: OffChain.hs  OnChain.hs  WalletAddress.hs
contract/test/: Main.hs
contract/test/Tests/: Utils.hs
contract/test/Tests/OffChain/: Trace0.hs  Trace1.hs  Trace2.hs  Trace3.hs
contract/test/Tests/Prop/: Escrow.hs
doc/: design.md  endpoints-spec.md  frontend-design.md  requirements.md
frontend/: .env  .eslintrc.json  Dockerfile  docker-compose.yaml  nginx.conf  package-lock.json  package.json  tsconfig.json
frontend/config/: webpack.config.js  webpackDevServer.config.js
frontend/public/: index.html
frontend/src/: App.tsx  index.css  index.tsx  react-app-env.d.ts
frontend/src/components/EscrowUI/: index.tsx
frontend/src/components/UserUI/: index.tsx
frontend/src/contractEndpoints/: escrow.ts  parameters.tsx  user.ts
tutorial/: conf.py  index.rst
tutorial/client_side/: 1_introduction.rst  1_modules_design.rst  2_pab_api.rst  3_contract_endpoints.rst  4_balancer.rst  5_frontend.rst
tutorial/preliminaries/: dapp_architecture.rst  setup_and_run.rst  the_example.rst
tutorial/server_side/: business_logic.rst  modules_design.rst  off_chain.rst  on_chain.rst  pab.rst  testing.rst
