cabal-Version: 2.4
name:          escrow
version:       0.0.0.1
license:       Apache-2.0
license-files: LICENSE NOTICE
synopsis:
    Simple Escrow dApp implemented using Plutus Scripts.

build-Type: Simple
category:   Language

library
  exposed-modules:
    Escrow
    Escrow.Business
    Escrow.OnChain
    Escrow.OffChain
    Escrow.Types
    Escrow.Validator
    Utils.OffChain

  hs-source-dirs:     src
  default-language:   Haskell2010
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DerivingStrategies
    DeriveTraversable
    ExplicitForAll
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    MultiParamTypeClasses
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TypeFamilies
    TypeOperators

  -- See Plutus Tx readme for why we need the following flags:
  -- -fobject-code -fno-ignore-interface-pragmas and -fno-omit-interface-pragmas
  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities -fobject-code
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

  --------------------
  -- IOG dependencies
  --------------------
  build-depends:
      cardano-api
    , plutus-chain-index-core
    , plutus-contract
    , plutus-core
    , plutus-ledger
    , plutus-ledger-constraints
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
      aeson
    , base          ^>= 4.14.1.0
    , bytestring
    , lens
    , freer-simple
    , freer-extras
    , containers
    , text
    , openapi3


test-suite escrow-tests
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  other-modules:
    Tests.Utils
    Tests.OffChain.Trace0
    Tests.OffChain.Trace1
    Tests.OffChain.Trace2
    Tests.OffChain.Trace3

  default-language: Haskell2010
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DerivingStrategies
    DeriveTraversable
    ExplicitForAll
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    MultiParamTypeClasses
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TypeFamilies
    TypeOperators
  ghc-options:
    -Wall -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr
    -fno-specialise

  --------------------
  -- IOG dependencies
  --------------------
  build-depends:
      plutus-pab
    , plutus-contract
    , plutus-core
    , plutus-ledger
    , plutus-ledger-api
    , plutus-tx-plugin
    , plutus-tx
    , plutus-use-cases

  ------------------------
  -- Non-IOG dependencies
  ------------------------

  build-depends:
      base ^>=4.14.1.0
    , aeson
    , ansi-terminal
    , containers
    , data-default
    , escrow
    , freer-extras
    , playground-common
    , prettyprinter
    , text
    , freer-simple
    , lens <= 4.19.2
    , bytestring
    , tasty
    , tasty-hunit
    , QuickCheck
    , tasty-quickcheck
    , text
    , prettyprinter
    , strict-containers
    , serialise
