cabal-Version: 2.4
name:          escrow
version:       0.0.0.1
license:       Apache-2.0
license-files: LICENSE NOTICE
synopsis:
    Simple Escrow dApp implemented using Plutus Scripts.

build-Type: Simple
category:   Language

library
  exposed-modules:
    Escrow
    Escrow.Business
    Escrow.OnChain
    Escrow.OffChain.Parameters
    Escrow.OffChain.ObservableState
    Escrow.OffChain.Operations
    Escrow.Types
    Escrow.Validator
    Utils.OffChain
    Utils.OnChain

  hs-source-dirs:     src
  default-language:   Haskell2010
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DerivingStrategies
    DeriveTraversable
    ExplicitForAll
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    MultiParamTypeClasses
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TypeFamilies
    TypeOperators

  -- See Plutus Tx readme for why we need the following flags:
  -- -fobject-code -fno-ignore-interface-pragmas and -fno-omit-interface-pragmas
  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities -fobject-code
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

  --------------------
  -- IOG dependencies
  --------------------
  build-depends:
      plutus-contract
    , plutus-core
    , plutus-ledger
    , plutus-ledger-constraints
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin
    , cardano-ledger-core
    , cardano-api

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
      aeson
    , base          ^>= 4.14.1.0
    , lens
    , containers
    , text

executable escrow-pab
  main-is:            Main.hs
  hs-source-dirs:     app, test
  other-modules:      EscrowHandlers
  default-language:   Haskell2010
  default-extensions: ImportQualifiedPost
  ghc-options:   -threaded -rtsopts -with-rtsopts=-N -Wall -Wcompat
                 -Wincomplete-uni-patterns -Wincomplete-record-updates
                 -Wno-missing-import-lists -Wredundant-constraints -O0
  --------------------
  -- IOG dependencies
  --------------------
  build-depends:
      plutus-contract
    , plutus-core
    , plutus-ledger
    , plutus-ledger-api
    , plutus-ledger-constraints
    , plutus-pab
    , plutus-tx
    , plutus-tx-plugin
    , cardano-ledger-core
    , cardano-api

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
      aeson
    , base          ^>= 4.14.1.0
    , containers
    , data-default
    , escrow
    , freer-simple
    , lens
    , openapi3
    , playground-common
    , prettyprinter
    , text

test-suite escrow-tests
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  other-modules:
    Tests.Utils
    Tests.Prop.Escrow
    Tests.OffChain.Trace0
    Tests.OffChain.Trace1
    Tests.OffChain.Trace2
    Tests.OffChain.Trace3

  default-language: Haskell2010
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DerivingStrategies
    DeriveTraversable
    ExplicitForAll
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TypeApplications
    TypeFamilies
    TypeOperators
  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities -fno-strictness
    -fno-spec-constr -fno-specialise -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas

  --------------------
  -- IOG dependencies
  --------------------
  build-depends:
    , plutus-contract
    , plutus-ledger
    , plutus-ledger-api
    , plutus-tx
    , freer-extras

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
      base ^>=4.14.1.0
    , containers
    , data-default
    , escrow
    , QuickCheck
    , text
    , lens
    , tasty
    , text
